--- a/BlogContent/themes/Daily/_config.yml
+++ b/BlogContent/themes/Daily/_config.yml
@@ -36,9 +36,9 @@ default_post_title: Untitled
 # social
 social:
   github: https://github.com/Ealon
-  # weibo: http://weibo.com/10010800
-  mail: mailto:ealonhuang@gmail.com
-  # twitter: https://twitter.com/GallenHu
+  wechat: 
+  gmail: mailto:ealonhuang@gmail.com
+  facebook: 
 
 # widget
 #   title: 标题
