--- a/BlogContent/_config.yml
+++ b/BlogContent/_config.yml
@@ -77,4 +77,6 @@ theme: Daily
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: git@github.com:Ealon/ealon.github.io.git
+  branch: master
