- change profile image & favicon.

--- a/BlogContent/themes/Daily/_config.yml
+++ b/BlogContent/themes/Daily/_config.yml
@@ -1,12 +1,12 @@
 # basic
 title: Daily
 subtitle: Minimalism, simplicity and refined details
-favicon: https://hexo.io/icon/favicon-96x96.png
+favicon: https://raw.githubusercontent.com/Ealon/ealon.github.io/master/images/ealon/ealon.png
 
 # avatar: images/avatar.png
 # banner_small: images/banner-small.png
 # banner_large: images/banner-large.png
-logo: https://hexo.io/logo.svg
+logo: https://raw.githubusercontent.com/Ealon/ealon.github.io/master/images/ealon/ealon.png
 
 # disqus
 #disqus_shortname: drakeleung
